--- a/AlanWeb/Views/Category/Index.cshtml
+++ b/AlanWeb/Views/Category/Index.cshtml
@@ -40,7 +40,7 @@
                         <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                             <i class="bi bi-pencil-square"></i> 編輯
                         </a>
-                        <a asp-controller="Category" asp-action="Delete" class="btn btn-danger mx-2">
+                        <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
                             <i class="bi bi-trash3-fill"></i> 刪除
                         </a>
                     </div>
