--- a/AlanWeb/Views/Shared/_Layout.cshtml
+++ b/AlanWeb/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="~/AlanWeb.styles.css" asp-append-version="true" />
     @* bootstrap圖案的css *@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    @* 加入toastr的css提醒視窗 *@
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
 </head>
 <body>
     <header>
@@ -38,6 +40,7 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            <partial name="_Notification" />
             @RenderBody() 
         </main>
     </div>
